# vigilant-adventure

./: .gitignore  ade20k.py  eval.py  feats.ipynb  mask_generators.py  samrefiner.py
pamss/: CMakeLists.txt  README.md  eigen_ccmath.c  heap.cpp  img.cpp  img.hpp  imgio.cpp  imgio.hpp  main.cpp  mergetreelog.cpp  mergetreelog.h  model.hpp  rag.cpp  rag.hpp  svd.c  treecut.cpp
pamss/data/: aloe.tif  astronaut.npy
pamss/iio/: Makefile  cmake_install.cmake  iioConfig.cmake  iio_api.h  iio_test.c  iio_test_named.c
